--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.4.0
+ordereddict==1.1
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
@@ -41,6 +42,7 @@ typed-ast==1.4.1
 urllib3==1.25.9
 wcwidth==0.2.5
 Werkzeug==1.0.1
+WooCommerce==2.1.1
 wrapt==1.11.2
 xlwt==1.3.0
 zipp==3.1.0
